--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,7 +1,7 @@
 {
     "comments": {
         // symbol used for single line comment. Remove this entry if your language does not support line comments
-        "lineComment": "//",
+        "lineComment": "注释：",
         // symbols used for start and end a block comment. Remove this entry if your language does not support block comments
         "blockComment": [ "/*", "*/" ]
     },
@@ -9,7 +9,9 @@
     "brackets": [
         ["{", "}"],
         ["[", "]"],
-        ["(", ")"]
+        ["(", ")"],
+        ["《", "》"],
+        ["<", ">"],
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
@@ -17,7 +19,9 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"]
+        ["'", "'"],
+        ["《", "》"],
+        ["<", ">"],
     ],
     // symbols that can be used to surround a selection
     "surroundingPairs": [
@@ -25,6 +29,8 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"]
+        ["'", "'"],
+        ["《", "》"],
+        ["<", ">"],
     ]
 }
